--- a/Salon/static/css/style.css
+++ b/Salon/static/css/style.css
@@ -118,7 +118,7 @@ body {
 .wrapper .header {
   width: 100%;
   height: 890px;
-  background: url(../ICON/fon2.png);    
+  background: url(../ICON/fonnn.jpg);    
   background-size: cover;
   background-attachment: fixed;
 }
