--- a/Salon/static/css/styles.css
+++ b/Salon/static/css/styles.css
@@ -84,9 +84,10 @@ footer {
 .about-us {
     position: absolute;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: aliceblue;
+    background-color: #FFFFFF;
     width: 400px;
     height: 70px;
     margin-top: 80px;
@@ -97,6 +98,9 @@ footer {
     .about-us p {
         font-size: 40px;
     }
+    .about-us h2 {
+        font-size: 20px;
+    }
 
 .social-links-container {
     position: absolute;
@@ -104,7 +108,7 @@ footer {
     justify-content: center;
     width: 1000px;
     height: 500px;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -124,7 +128,7 @@ footer {
     display: flex;
     flex-direction: column;
     box-sizing: content-box;
-    background-color: aliceblue;
+    background-color: #FFFFFF;
     width: 200px;
     height: 350px;
     border-radius: 10px;
