--- a/Salon/static/css/styles.css
+++ b/Salon/static/css/styles.css
@@ -1,4 +1,3 @@
-
 .thesis-head {
     font-size: inherit;
 }
@@ -90,17 +89,18 @@ footer {
     background-color: #FFFFFF;
     width: 400px;
     height: 70px;
-    margin-top: 80px;
+    margin-top: 50px;
     left: 50%;
     transform: translate(-50%);
 }
 
-    .about-us p {
-        font-size: 40px;
-    }
-    .about-us h2 {
-        font-size: 20px;
-    }
+.about-us p {
+    font-size: 40px;
+}
+
+.about-us h2 {
+    font-size: 20px;
+}
 
 .social-links-container {
     position: absolute;
@@ -137,22 +137,21 @@ footer {
     transition: 0.7s;
 }
 
-    .link-box:hover {
-        transform: scale(1.05);
-        cursor: pointer;
-    }
+.link-box:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
 
-    .link-box img {
-        margin-top: 20px;
-        align-self: center;
-        filter: contrast(1.2);
-    }
+.link-box img {
+    margin-top: 20px;
+    align-self: center;
+    filter: contrast(1.2);
+}
 
-    .link-box p {
-        font-size: 20px;
-        font-weight: bold;
-        ;
-    }
+.link-box p {
+    font-size: 20px;
+    font-weight: bold;
+}
 
 .contact-info-container {
     position: relative;
@@ -166,14 +165,13 @@ footer {
     height: 50px;
 }
 
-    .contact-info-container:hover {
-        cursor: pointer;
-    }
+.contact-info-container:hover {
+    cursor: pointer;
+}
 
-    .contact-info-container p {
-        font-size: 25px;
-    }
-
+.contact-info-container p {
+    font-size: 25px;
+}
 
 /* Стили для ссылок */
 .social-links ul,
@@ -183,12 +181,12 @@ footer {
     padding: 0;
 }
 
-    /* Стили для ссылок на социальные сети */
-    .social-links ul li a {
-        color: #333;
-        text-decoration: none;
-        margin: 0 10px;
-    }
+/* Стили для ссылок на социальные сети */
+.social-links ul li a {
+    color: #333;
+    text-decoration: none;
+    margin: 0 10px;
+}
 
 /* Стили для блоков социальных сетей и мессенджеров */
 .social-links,
@@ -196,10 +194,13 @@ footer {
     text-align: center;
     margin-top: 20px;
 }
+
+/* Стили для формы отзывов */
 .review-form-container {
-    margin-top: 150px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh; /* Высота контейнера равна высоте окна просмотра */
 }
 
 .review-form {
@@ -209,29 +210,34 @@ footer {
     width: 300px;
 }
 
-    .review-form label {
-        font-size: 18px;
-        color: #333;
-        font-weight: bold;
-    }
+.review-form label {
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+}
 
-    .review-form input, .review-form textarea, .review-form button {
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ddd;
-    }
+.review-form input, .review-form textarea, .review-form button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
 
-    .review-form button {
-        background-color: #FF88C2;
-        color: #fff;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
+.review-form textarea {
+    resize: none; /* Отключаем возможность изменения размера */
+    overflow: hidden; /* Отключаем скролл */
+}
 
-        .review-form button:hover {
-            background-color: #FF57A1;
-        }
+.review-form button {
+    background-color: #FF88C2;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.review-form button:hover {
+    background-color: #FF57A1;
+}
 
 .review-cards-container {
     margin-top: 50px;
@@ -254,17 +260,31 @@ footer {
     transition: transform 0.3s;
 }
 
-    .review-card:hover {
-        transform: scale(1.05);
-    }
+.review-card:hover {
+    transform: scale(1.05);
+}
 
-    .review-card h3 {
-        font-size: 24px;
-        color: #444;
-        font-weight: bold;
-    }
+.review-card h3 {
+    font-size: 24px;
+    color: #444;
+    font-weight: bold;
+}
 
-    .review-card p {
-        font-size: 18px;
-        color: #444;
-    }
+.review-card p {
+    font-size: 18px;
+    color: #444;
+}
+
+/* Стили для выделения */
+::selection {
+    background: #FF88C2;
+    color: #fff;
+}
+.error {
+    display: inline-block;
+    color: red;
+    margin-left: 10px; /* Регулирует расстояние между полем "Телефон" и сообщением об ошибке */
+    font-size: 14px;
+    margin-top: 5px;
+    vertical-align: top;
+}
