--- a/Salon/static/css/styles.css
+++ b/Salon/static/css/styles.css
@@ -89,8 +89,8 @@ footer {
     justify-content: center;
     background-color: #FFFFFF;
     width: 400px;
-    height: 70px;
-    margin-top: 50px;
+    height: 60px;
+    margin-top: 40px;
     left: 50%;
     transform: translate(-50%);
 }
@@ -265,11 +265,11 @@ footer {
     transform: scale(1.05);
 }
 
-.review-card h3 {
-    font-size: 24px;
-    color: #444;
-    font-weight: bold;
-}
+    .review-card h3 {
+        font-size: 24px;
+        color: #FF88C2;
+        font-weight: bold;
+    }
 
 .review-card p {
     font-size: 18px;
@@ -303,3 +303,22 @@ footer {
         margin-top: 5px;
         white-space: nowrap;
     }
+
+.submit-button {
+    margin-top: 20px; /* Увеличиваем отступ сверху */
+}
+.thank-you-message {
+    font-size: 24px; /* Увеличиваем размер шрифта */
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 20px;
+    margin-bottom: 30px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
